# vitafit_ble

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/vitafit_vt701_ble/: __init__.py  packet_description.md  parser.py
tests/: basic_test.py  conftest.py  test_parser.py
