[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitafit_vt701_ble"
dynamic = ["version"]
authors = [
  { name="Prab", email="prabhjotsbhatia.ca@gmail.com" },
]
description = "An unofficial Python package for interacting with Vitafit VT701 Body Fat Scales using BLE. Not affiliated with Vitafit, or any of their subsidiaries."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "vitafit",
    "vt701",
    "smart scale",
    "fitness scale",
    "bluetooth",
    "ble",
    "weight",
    "health",
    "iot",
    "smart home",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bleak",
    "bleak_retry_connector",
]

[tool.hatch.version]
path = "src/vitafit_vt701_ble/_version.py"

[project.urls]
"Homepage" = "https://github.com/prabhjotsbhatia-ca/vitafit_vt701_ble"
"Bug Tracker" = "https://github.com/prabhjotsbhatia-ca/vitafit_vt701_ble/issues"
"Documentation" = "https://github.com/prabhjotsbhatia-ca/vitafit_vt701_ble#readme"
"Source Code" = "https://github.com/prabhjotsbhatia-ca/vitafit_vt701_blee"

[tool.hatch.build.targets.wheel]
packages = ["src/vitafit_vt701_ble"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
